﻿shmuel 01.08.2014 12:38:19 +0200 - build 408

1. LuaFAR + generic plugin: уточнение 382; плагин падал при следующих обстоятельствах:
   - из макроса A добавляем новый макрос B посредством far.MacroAdd, параметр callback - функция;
   - после завершения макроса A вызываем макрос B;
   - падаем, т.к. в callback() происходит обращение к уже невалидному lua_State макроса A.

2. LuaFAR: если при вызове callback() макроса, добавленного по far.MacroAdd, происходила ошибка,
   то возвращалось TRUE, и макрос мог быть исполнен.

shmuel 28.07.2014 15:40:16 +0200 - build 407

1. LuaFAR + generic plugin: новая функция far.SubscribeDialogDrawEvents.

shmuel 22.07.2014 10:13:18 +0200 - build 406

1. LuaFAR: в таблице, возвращаемой вызовом export.ProcessEditorEvent(EE_CHANGE),
   значения поля 'StringNumber' отсчитываются от 1.

shmuel 22.07.2014 09:07:35 +0200 - build 405

1. Уточнение 404.

shmuel 22.07.2014 08:00:07 +0200 - build 404

1. Функция editor.SubscribeChangeEvent не работала, будучи вызвана из макроса.
   (Она работала только если был загружен хотя бы один обработчик с group="EditorEvent").

shmuel 21.07.2014 20:32:05 +0200 - build 403

1. LuaFAR: новая функция editor.GetTitle.

shmuel 19.07.2014 20:47:27 +0200 - build 402

1. LuaFAR: функция editor.ClearSessionBookmarks возвращает булевое значение, а не число.

shmuel 18.07.2014 07:46:24 +0200 - build 401

1. LuaFAR: функции editor.GetBookmarks и editor.GetSessionBookmarks неправильно работали и вызывали падение.

shmuel 17.07.2014 16:38:07 +0200 - build 400

1. LuaFAR: функции panel.* не работали с хэндлами панелей, полученными от panel.GetPanelInfo().

shmuel 16.07.2014 18:28:05 +0200 - build 399

1. Новая функция: mf.acall. Подробности - в мануале.

shmuel 15.07.2014 00:22:49 +0200 - build 398

1. Мелкий рефакторинг.

shmuel 14.07.2014 21:01:59 +0200 - build 397

1. Игнорируем неправильные команды от вызовов Plugin.Command().

shmuel 08.07.2014 16:11:57 +0200 - build 396
