@@ -1,4 +1,8 @@
-﻿shmuel 01.08.2014 12:38:19 +0200 - build 408
+﻿shmuel 01.08.2014 22:52:40 +0200 - build 409
+
+1. LuaFAR: функция 'editor.GetSelection' выдавала неправильные результаты для вертикальных блоков нулевой ширины.
+
+shmuel 01.08.2014 12:38:19 +0200 - build 408
 
 1. LuaFAR + generic plugin: уточнение 382; плагин падал при следующих обстоятельствах:
    - из макроса A добавляем новый макрос B посредством far.MacroAdd, параметр callback - функция;
